Question subclasses edit, temporary initial data